--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
   font-family: "Roboto Mono", monospace;
 }
 
+:root {
+  --gray-font: #383738;
+  --gray-background: #ada9ad94;
+  --gray-list: #7c7676;
+  --black: #000000;
+  --white: #ffffff;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap");
 
 /* menu */
@@ -16,6 +24,7 @@
 }
 
 .menuLeft {
+  color: var(--gray-font);
   display: flex;
   align-items: center;
 }
@@ -35,7 +44,7 @@
 
 .link {
   text-decoration: none;
-  color: #383738;
+  color: var(--gray-font);
 }
 
 .menuItem {
@@ -75,6 +84,7 @@
 }
 
 .title {
+  color: var(--gray-font);
   text-align: center;
   font-size: 28px;
   font-weight: 700;
@@ -82,6 +92,7 @@
 }
 
 .paragraph {
+  color: var(--gray-font);
   text-align: left;
   margin: 20px 0px;
 }
@@ -100,6 +111,7 @@
 }
 
 .titleTable {
+  color: var(--gray-font);
   text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -118,7 +130,7 @@
 }
 
 .itemSkill:nth-child(even) {
-  background-color: #7c7676;
+  background-color: var(--gray-list);
 }
 
 /* section contact */
@@ -147,8 +159,8 @@
 .footer {
   display: flex;
   justify-content: center;
-  background-color: #000;
-  color: #fff;
+  background-color: var(--black);
+  color: var(--white);
   padding-top: 3px;
   padding-bottom: 3px;
 }
